# structured-products-digital-twin

./: .dockerignore  .gitignore  Dockerfile  INR_XVA_Platform_Documentation.md  README.md  SPDT_Design_and_Build.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
cpp/: benchmark.py  build_kernel.py
cpp/mc_kernel/: autocall_kernel.cpp
dashboard_data/: desk.json
data/: counterparties.csv  portfolio.csv
data/exposure_cube.parquet/: part-30f6cc5b69424a67841a270a0b0001d1.parquet  part-d3642bbab5f94314a93480ffed511b0f.parquet
db/: models.py
docs/: EQUITY_STRUCTURING_INTERVIEW_ANSWER_KEY.md  EQUITY_STRUCTURING_INTERVIEW_PREP_GUIDE.md  EVOLUTION_AUDIT.md  PROJECT_WALKTHROUGH.md  SPDT_Interview_Defense_Detailed.md  SPDT_Layer_Walkthrough.md  architecture.md  interview_defense.md  xva_case_study.md
docs/adr/: 0001-market-snapshot-as-central-abstraction.md  0002-funding-curve-as-spread-over-ois.md  0003-ssvi-over-independent-svi-slices.md  0004-andersen-qe-scheme-for-heston.md  0005-in-process-event-bus.md  0006-cpp-kernel-as-optional-accelerator.md  0007-integrate-xva-at-the-exposure-seam.md
integration/: __init__.py  all_in_price.py  ccr_overlays.py  credit.py  curve_adapter.py  exposure_export.py  exposure_package.py  governance.py  xva_risk.py
notebooks/: demo_mvp.py
reports/: EOD_Risk_Report_20260603.csv
spdt/backtest/: __init__.py  issuance.py  stats.py
spdt/book/: __init__.py  book.py  generator.py
spdt/core/: __init__.py  bus.py  provenance.py  snapshot.py  types.py
spdt/corr/: __init__.py  copula.py  estimators.py  psd.py
spdt/dashboard/: __init__.py  app.py  desk_data.py  theme.py
spdt/data/: __init__.py  live.py  snapshot_builder.py  store.py
spdt/greeks/: __init__.py  buckets.py  bump.py  likelihood.py  pathwise.py
spdt/hedging/: __init__.py  (+1 more)
src/: __init__.py
tests/: test_aad_autocallable.py  test_arbitrage.py  test_backtest.py  test_barrier_correction.py  test_book.py  test_bs_inversion.py  test_bus.py  test_catalog_notes.py  test_composable_legs.py  test_correlation.py  test_curve.py  test_curves.py  test_dashboard.py  test_data_pipeline.py  test_dhan.py  test_factsheet.py  test_fbil.py  test_forward_smile.py  test_greeks.py  test_hedging.py  test_heston.py  test_localvol_pricing.py  test_lsv.py  test_modelrisk.py  test_native_kernel.py  test_nse_bhavcopy.py  test_nse_python.py  test_pde.py  test_pnl.py  test_pricing_end_to_end.py  test_pricing_mc.py  test_products.py  test_provenance.py  test_rate_bootstrap.py  test_reporting.py  test_server.py  test_snapshot.py  test_ssvi_localvol.py  test_stress.py  test_structurer.py  (+6 more)
webapp/: README.md  __init__.py  requirements.txt  server.py
xva/: README.md  XVA_Engine_Master_Concept_Guide.md  _make_pipeline_diagram.py  requirements.txt
(+179 files in other folders)
