[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdt"
version = "0.1.0"
description = "Structured Products Digital Twin — a full equity structured-products desk simulation on free Indian market data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Shreyas Mashelkar" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "numba>=0.59",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "yfinance>=0.2",
    "requests>=2.31",
    "certifi>=2024.2",
]

[project.optional-dependencies]
ad = ["jax>=0.4.25", "jaxlib>=0.4.25"]
dashboard = ["streamlit>=1.32", "plotly>=5.20"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
