[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdt"
version = "0.1.0"
description = "Structured Products Digital Twin — a full equity structured-products desk simulation on free Indian market data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shreyas Mashelkar" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "numba>=0.59",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "yfinance>=0.2",
    "requests>=2.31",
    "certifi>=2024.2",
]

[project.optional-dependencies]
ad = ["jax>=0.4.25", "jaxlib>=0.4.25"]
dashboard = ["streamlit>=1.32", "plotly>=5.20"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# NumPy 2.x ships shape-typed stubs that distinguish 1-D `ndarray[tuple[int], …]` from
# n-D `ndarray[tuple[int, …], …]`. Our numerical kernels routinely rebind an array to the
# result of `np.where`/`np.column_stack`/broadcast ops, which the stubs flag as a shape
# mismatch even though the code is correct. We relax only `assignment`/`arg-type` (the two
# noise codes) for those specific modules; every other check still applies.
[[tool.mypy.overrides]]
module = [
    "spdt.pricing.models.heston",
    "spdt.pricing.models.lsv",
    "spdt.hedging.delta_vega",
    "spdt.vol.arbitrage",
]
disable_error_code = ["assignment", "arg-type"]
